<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hand.avssign.activity.SettingsActivity">

    <TextView
        android:id="@+id/txt_choose_signature_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_choose_signature_color"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"/>

    <Spinner
        android:id="@+id/spinner_color_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_choose_signature_color"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/spinner_style" />

    <TextView
        android:id="@+id/txt_choose_signature_thickness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_color_picker"
        android:text="@string/str_choose_signature_thickness"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"/>

    <Spinner
        android:id="@+id/spinner_thickness_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_choose_signature_thickness"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/spinner_style" />

    <EditText
        android:id="@+id/edit_api_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_thickness_picker"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_style"
        android:ellipsize="end"
        android:gravity="top"
        android:hint="@string/str_api_url"
        android:inputType="textUri"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edit_subunit_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_api_url"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_style"
        android:ellipsize="end"
        android:gravity="top"
        android:inputType="number"
        android:hint="@string/str_subunit_code"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edit_secret_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_subunit_code"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_style"
        android:ellipsize="end"
        android:gravity="top"
        android:inputType="textPassword"
        android:hint="@string/str_secret_key"

        android:singleLine="true" />

    <LinearLayout
        android:id="@+id/pnl_buttons"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/str_ok"
            android:textAllCaps="false"
            android:textColor="@color/colorCocoaBrown"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/str_cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorCocoaBrown"
            android:onClick="onClick"/>
    </LinearLayout>

</RelativeLayout>
