<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hand.avssign.activity.MainActivity">

    <Button
        android:id="@+id/btn_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:background="@drawable/button_style"
        android:onClick="onClick"
        android:text="@string/str_sign"
        android:textAllCaps="false"
        android:textColor="@color/colorCocoaBrown"
        android:textSize="30sp"
        android:enabled="false"/>

    <Button
        android:id="@+id/btn_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@drawable/button_style"
        android:onClick="onClick"
        android:text="@string/str_text"
        android:textAllCaps="false"
        android:textColor="@color/colorCocoaBrown"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@drawable/button_style"
        android:onClick="onClick"
        android:text="@string/str_settings"
        android:textAllCaps="false"
        android:textColor="@color/colorCocoaBrown"
        android:textSize="30sp" />
</LinearLayout>
